# typeinfo

./: Cargo.toml  README.md
typeinfo-core/: Cargo.toml
typeinfo-core/src/: lib.rs
typeinfo-macro/: Cargo.toml
typeinfo-macro/src/: lib.rs
typeinfo-test/: Cargo.toml
typeinfo-test/src/: expanded.rs  main.rs
