[package]
name = "typeinfo-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "typeinfo-test"

[dependencies.typeinfo-macro]
path = "../typeinfo-macro"

[dependencies.typeinfo-core]
path = "../typeinfo-core"
